--- a/css/home.css
+++ b/css/home.css
@@ -352,4 +352,13 @@ iframe {
 .posters img {
   max-height: 30rem;
 }
+
+/* Footer */
+footer li {
+  font-size: 1.4rem;
+}
+
+footer p {
+  font-size: 1.2rem;
+}
 }
